--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
 	line-height: 1;
-	background-color: #0b75c8;
-	color:black;
+	background-color: #333;
 	font-size: 125%;
 	font-family: Helvetica Neue, Helvetica, sans-serif;
     margin-top: 60px;
@@ -19,6 +18,7 @@ body {
 
 p { text-align:left; }
 
+p, a, h1, h2, h3, h4, h5, h6 { color:#9CFF00;}
 
 .row-fluid {
 	min-width: 140px;
